# zerith_public_sdk

./: README.md
H1_SDK1.3.0/: VERSION
H1_SDK1.3.0/camera_sdk_client_cpp/: CMakeLists.txt
H1_SDK1.3.0/camera_sdk_client_py/lib/: __init__.py
H1_SDK1.3.0/robot_SDK/: CMakeLists.txt
H1_SDK1.3.0/robot_SDK/example/: h1_low_level_KPKD.cpp  h1_low_level_motor_limit.cpp  h1_low_level_simple.cpp
H1_SDK1.3.0/robot_SDK/include/H1/: H1_Robot.hpp  Robot.hpp  config.hpp  ip_service.grpc.pb.h
H1_SDK1.3.0/robot_SDK/include/H1/ZCM_Data/: ChassisState.hpp  ZCM_Data.hpp  arm_actions_zcmt.hpp  chassis_control_zcmt.hpp  chassis_param_zcmt.hpp  chassis_state_zcmt.hpp  communication_board_zcmt.hpp  control_mode_zcmt.hpp  error_log_zcmt.hpp  fixed_rod_zcmt.hpp  gripper_control_mode_zcmt.hpp  gripper_control_zcmt.hpp  gripper_state_zcmt.hpp  head_control_zcmt.hpp  head_state_zcmt.hpp  power_state_zcmt.hpp  robot_info_zcmt.hpp  state_estimator_zcmt.hpp  system_init_zcmt.hpp  upper_joint_control_zcmt.hpp  upper_joint_state_zcmt.hpp  waist_control_zcmt.hpp  waist_state_zcmt.hpp  xbox_map_zcmt.hpp
H1_SDK1.3.2/audio_sdk_py/: asr_test.py
H1_SDK1.3.2/audio_sdk_py/lib/: __init__.py
H1_SDK1.3.2/camera_sdk_client_cpp/include/: camera_client.h  robot.grpc.pb.h  robot.pb.h
H1_SDK1.3.2/camera_sdk_client_py/: demo.py
H1_SDK1.3.2/h1_sdk_v1.3.2_python3.10/example/: h1_high_level.py  state_monitor.py
H1_SDK1.3.2/robot_SDK/: VERSION
H1_SDK1.3.2/robot_SDK/example/: h1_high_level_complex_new.cpp  h1_low_level_simple.cpp
H1_SDK1.3.2/robot_SDK/include/H1/: H1_Robot.hpp
H1_SDK1.3.2/robot_SDK/include/H1/ZCM_Data/: ZCM_Data.hpp
H1_SDK1.3.4/camera_sdk_client_cpp/: demo.cpp
H1_SDK1.3.4/camera_sdk_client_py/: demo.py
H1_SDK1.3.4/h1_sdk_v1.3.4_python3.10/example/: h1_low_level.py  state_monitor.py
H1_SDK1.3.4/robot_SDK/: VERSION
H1_SDK1.3.4/robot_SDK/example/: h1_low_level_simple.cpp
H1_SDK1.3.4/robot_SDK/include/H1/: H1_Robot.hpp  config.hpp
H1_SDK1.3.4/robot_SDK/include/H1/ZCM_Data/: ChassisParam.hpp  SystemInit.hpp  ZCM_Data.hpp
H1_SDK1.3.5/: VERSION
H1_SDK1.3.5/h1_sdk_v1.3.5_python3.10/example/: h1_high_level.py  state_monitor.py
H1_SDK1.3.5/robot_SDK/: CMakeLists.txt
H1_SDK1.3.5/robot_SDK/example/: h1_low_level_motor_limit.cpp  h1_low_level_simple.cpp
H1_SDK1.3.5/robot_SDK/include/H1/: H1_Robot.hpp  MotorStateMonitor.hpp  config.hpp
H1_SDK1.3.5/robot_SDK/include/H1/ZCM_Data/: ArmEndPose.hpp  ImuData copy.hpp  ZCM_Data.hpp
H1_SDK1.3.6/camera_sdk_cpp/: CMakeLists.txt  README.md
H1_SDK1.3.6/camera_sdk_cpp/examples/: 02_minimal_depth.cpp  05_full_demo.cpp
H1_SDK1.3.6/camera_sdk_python/: README.md  requirements.txt
H1_SDK1.3.6/camera_sdk_python/example/: 02_minimal_depth.py  04_get_full_state.py  05_full_demo.py
H1_SDK1.3.6/camera_sdk_python/proto/: robot_pb2.py
H1_SDK1.3.6/h1_sdk_v1.3.6_python3.10/example/: h1_force_sensor.py  h1_hand_control.py  h1_high_level.py  h1_low_level.py  state_monitor.py
H1_SDK1.3.6/h1_sdk_v1.3.6_python3.10/lib/: lib_h1_sdk_python.pyi
H1_SDK1.3.6/robot_SDK/: CMakeLists.txt  VERSION
H1_SDK1.3.6/robot_SDK/example/: h1_Test_ForceSensor.cpp  h1_high_level_complex_new.cpp  h1_low_level_HandControl.cpp  h1_low_level_simple.cpp
H1_SDK1.3.6/robot_SDK/include/H1/: H1_Robot.hpp  config.hpp
H1_SDK1.3.6/robot_SDK/include/H1/GRPC_Data/ubuntu20/: ip_service.grpc.pb.h  ip_service.pb.h
H1_SDK1.3.6/robot_SDK/include/H1/GRPC_Data/ubuntu22/: ip_service.grpc.pb.h  ip_service.pb.h
H1_SDK1.3.6/robot_SDK/include/H1/GRPC_Data/ubuntu24/: ip_service.pb.h
H1_SDK1.3.6/robot_SDK/include/H1/ZCM_Data/: ForceSensorControl.hpp  GripperState.hpp  HandState.hpp  HighLevelControl.hpp  PowerState.hpp  WaistState.hpp  ZCM_Data.hpp
H1_SDK_1.3.7/camera_sdk_cpp/: CMakeLists.txt
H1_SDK_1.3.7/camera_sdk_cpp/examples/: 01_minimal_color.cpp  03_multi_cam_viewer.cpp  04_get_full_state.cpp
H1_SDK_1.3.7/camera_sdk_cpp/include/: camera_client.h  robot.grpc.pb.h  robot.pb.h
H1_SDK_1.3.7/camera_sdk_python/: README.md
H1_SDK_1.3.7/camera_sdk_python/example/: 01_minimal_color.py  03_multi_cam_viewer.py
H1_SDK_1.3.7/camera_sdk_python/proto/: robot_pb2_grpc.py
H1_SDK_1.3.7/h1_sdk_v1.3.7_py3.10/example/: h1_force_sensor.py  h1_hand_control.py  h1_high_level.py  h1_low_level.py  state_monitor.py
H1_SDK_1.3.7/h1_sdk_v1.3.7_py3.10/lib/: lib_h1_sdk_python.pyi
H1_SDK_1.3.7/robot_SDK/: CMakeLists.txt  VERSION
H1_SDK_1.3.7/robot_SDK/example/: h1_high_level_complex_new.cpp  h1_low_level_KPKD.cpp  h1_low_level_simple.cpp
H1_SDK_1.3.7/robot_SDK/include/: H1_Robot.hpp
H1_SDK_1.3.7/robot_SDK/include/GRPC_Data/: GrpcServiceClient.hpp  ip_service.proto
H1_SDK_1.3.7/robot_SDK/include/ZCM_Data/: ChassisControl.hpp  CommunicationBoardState.hpp  ControlMode.hpp  FixedRod.hpp  ForceSensorState.hpp  GripperControl.hpp  GripperControlMode.hpp  HandControl.hpp  HeadControl.hpp  HeadState.hpp  HighLevelControl.hpp  HighLevelState.hpp  RobotInfo.hpp  SystemSpace.hpp  UpperJointControl.hpp  UpperJointState.hpp  WaistControl.hpp  XboxMap.hpp  ZCM_Data.hpp
H1_SDK_1.3.7/robot_SDK/include/log/: log.hpp  log_c.h  log_stream.hpp
